compiler/tests/fa/errors/pure_void_fa.salam
// انتظار: خطا۰۱۲
// زبان: فارسی
خالص تابع هیچ(x : صحیح):
    y : خودکار = x
پایان

تابع اصلی:
    هیچ(1)
پایان
